--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sweet-loader",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Loader for sweet.js 1.x macros",
   "main": "index.js",
   "keywords": [
@@ -12,7 +12,7 @@
     "loader-utils": "^0.2.1"
   },
   "peerDependencies": {
-    "sweet.js": "^1.0.0"
+    "sweet.js": ">=1.0.0 < 3.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
